Bug 403579: Don't scale up width by a pct when it's nscoord_MAX. Also, use NSCoordSaturating function with guess_pref since it could be nscoord_MAX.  r+sr=roc, a=mtschrep